Tweaked openapi generation
